Optimized the project considering sonarqube issues